# advent-of-code-2024

./: .gitignore  README.md  pyproject.toml
aoc_2024/: __about__.py  __init__.py  core.py
aoc_2024/day01/: day01.py  test_day01.py
aoc_2024/day01/part1/: solution1p1.py  test_solution1p1.py
aoc_2024/day02/: day02.py  test_day02.py
aoc_2024/day03/: day03.py  soln.py  test_day03.py
aoc_2024/day04/: day04.py  soln.py  test_day04.py
aoc_2024/day05/: soln.py  test_day05.py
aoc_2024/day06/: soln.py  test_day06.py
aoc_2024/day07/: soln.py  test_day07.py
aoc_2024/day08/: soln.py  test_day08.py
aoc_2024/day09/: soln.py  test_day09.py
aoc_2024/day10/: soln.py  test_day10.py
aoc_2024/day11/: soln.py  test_day11.py
aoc_2024/day13/: soln.py  test_day13.py
